[gd_scene load_steps=8 format=3 uid="uid://dp7cfc5xnwnph"]

[ext_resource type="Script" path="res://src/SpaceAssets/Planets/planet.gd" id="1_6yw34"]
[ext_resource type="Texture2D" uid="uid://deifmngf5bbmy" path="res://assets/environment/props/planet.png" id="1_aln4k"]
[ext_resource type="Texture2D" uid="uid://cqo2hmp16vxfw" path="res://assets/environment/props/planet_outline.png" id="3_xjpod"]
[ext_resource type="PackedScene" uid="uid://dxr8yrg58t6tm" path="res://src/SpaceAssets/Wormhole/travel_popup.tscn" id="4_bogor"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jvglu"]
radius = 180.003

[sub_resource type="Gradient" id="Gradient_fcmfm"]
interpolation_mode = 1
colors = PackedColorArray(0.712129, 0.712129, 0.712129, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4c5no"]
gradient = SubResource("Gradient_fcmfm")

[node name="Planet" type="Area2D"]
position = Vector2(-1, 0)
script = ExtResource("1_6yw34")

[node name="Planet" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
texture = ExtResource("1_aln4k")

[node name="SphereOfInfluence" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jvglu")

[node name="LineRender" type="Sprite2D" parent="."]
visible = false
position = Vector2(4, 3)
rotation = -1.25664
scale = Vector2(3.25, 0.0625)
texture = SubResource("GradientTexture2D_4c5no")
offset = Vector2(31.9694, -0.107372)

[node name="PlanetOutline" type="Sprite2D" parent="."]
visible = false
z_index = 1
texture = ExtResource("3_xjpod")

[node name="TravelPopup" parent="." instance=ExtResource("4_bogor")]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = 30.0
offset_right = 1.0
offset_bottom = 30.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
